# cashmere

./: .clang-format  .gitignore  CLA  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-image.sh  run.sh
.github/workflows/: c-cpp.yml  docker-image.yml
cashmere/: CMakeLists.txt  CMakePresets.json
cashmere/cmake/: CashmerePluginsFunctions.cmake  cashmereConfig.cmake.in
cashmere/crdt/: CMakeLists.txt
cashmere/crdt/include/cashmere/: connectioninfo.h  ledger.h
cashmere/crdt/tests/: CMakeLists.txt
cashmere/docs/: client-id-spec.md  protocol-spec.md
cashmere/grpc_utils/: CMakeLists.txt
cashmere/grpc_utils/include/cashmere/utils/: grpc.h
cashmere/grpc_utils/src/: grpcutils.cpp
cashmere/include/: broker.h  clock.h  journal.h
cashmere/include/cashmere/: brokerbase.h  brokerstore.h  brokerwrapper.h  cashmere.h  connection.h  journalbase.h
cashmere/plugins/: CMakeLists.txt  cache.cpp  file.cpp  grpc.cpp  grpc.h  hub.h  hub_plugin.cpp  journalbase.h
cashmere/plugins/cmake/: CashmerePluginsFunctions.cmake
cashmere/plugins/include/: cache.h  file.h
cashmere/plugins/src/: cache.cpp  file.cpp
cashmere/src/: brokerbase.cpp  brokerstore.cpp  brokerwrapperbase.cpp  core.cpp  grpcrunner.cpp  grpcrunner.h  hub.cpp  journalbase.cpp  ledger.cpp  random.cpp  wrapperstore.cpp
cashmere/tests/: CMakeLists.txt  test_broker.cpp  test_brokerstore.cpp  test_brokerstub.cpp  test_journal.cpp  test_journal_clock.cpp  test_journalfile.cpp  test_plugins.cpp
cashmere/types/: CMakeLists.txt
cashmere/types/include/cashmere/: cashmere_export.h  clock.h  entry.h  types.h
cashmere/types/src/: clock.cpp  connectioninfo.cpp  entry.cpp  ledger.cpp
cashmere/types/tests/: CMakeLists.txt  test_clock.cpp
cashmere/utils/: CMakeLists.txt
cashmere/utils/include/cashmere/utils/: file.h  random.h  url.h
cashmere/utils/src/: random.cpp  urlutils.cpp
cashmere/utils/tests/: test_file.cpp
docker/: Dockerfile  build-image.sh  run.sh
docs/: broker-spec.md  data-conciliation-spec.md  transaction-spec.md
grpc/: CMakeLists.txt
grpc/plugins/: CMakeLists.txt
grpc/plugins/src/: grpc.cpp
grpc/proto/: CMakeLists.txt
grpc/proto/proto/: cashmere.proto
grpc/runner/: CMakeLists.txt
grpc/runner/src/: grpcrunner.cpp
grpc/src/: grpcrunner.cpp  grpcrunner_plugin.cpp
grpc/tests/: CMakeLists.txt  brokermock.h  test_brokergrpcstub.cpp
grpc/utils/: CMakeLists.txt
include/: broker.h  brokerI.h  brokerbase.h  brokergrpc.h  brokergrpcstub.h  brokerhub.h  cashmere.h  clock.h  command.h  device.h  entry.h  journal.h  journalbase.h  journalfile.h  ledger.h  options.h  random.h  signal.h  utils.h
include/cashmere/: broker.h  brokerbase.h  brokergrpc.h  brokergrpcclient.h  brokerstore.h  brokerwrapper.h  cashmere.h  clock.h  entry.h  grpcrunner.h  journal.h  journalbase.h  journalfile.h  ledger.h
include/utils/: fileutils.h  grpcutils.h
plugins/: cache.h  cache_plugin.cpp  file.cpp  file.h  file_plugin.cpp  grpc.cpp  grpc_plugin.cpp  hub.cpp
proto/: cashmere.proto
signal/: CMakeLists.txt  CMakePresets.json  README.md
signal/docs/: broker-spec.md
signal/include/signal/: signal.h
signal/tests/: test_signal.cpp
src/: broker.cpp  broker.h  brokerbase.cpp  brokergrpc.cpp  brokergrpcclient.cpp  brokergrpcstub.cpp  brokergrpcstub.h  brokerhub.cpp  cashmere.cpp  clock.cpp  command.cpp  command.h  core.cpp  core.h  device.cpp  entry.cpp  grpcrunner.cpp  journal.cpp  journal.h  journalbase.cpp  journalbase.h  journalfile.cpp  ledger.cpp  main.cpp  options.cpp  options.h  signal.cpp  utils.cpp
src/cli/: CMakeLists.txt  command.cpp  main.cpp  options.cpp  options.h
src/core/: CMakeLists.txt  broker.cpp  brokerbase.cpp  brokerbaseimpl.cpp  brokerbaseimpl.h  brokergrpcstub.cpp  brokergrpcstub.h  core.cpp  grpcrunner.cpp  grpcutils.cpp  grpcutils.h  journalfile.h  ledger.cpp  storeimpl.h
src/utils/: CMakeLists.txt  fileutils.cpp  fileutils.h  grpcutils.cpp  grpcutils.h  random.cpp  urlutils.cpp
tests/: CMakeLists.txt  brokermock.h  fixtures.h  test_book.cpp  test_broker.cpp  test_broker_store.cpp  test_brokergrpcstub.cpp  test_brokerhub.cpp  test_brokerstore.cpp  test_brokerstub.cpp  test_clock.cpp  test_command.cpp  test_connection.cpp  test_device.cpp  test_device_clock.cpp  test_device_id.cpp  test_device_pool.cpp  test_device_transaction.cpp  test_entry.cpp  test_fileutils.cpp  test_journal.cpp  test_journal_clock.cpp  test_journal_id.cpp  test_journal_query.cpp  test_journalfile.cpp  test_ledger.cpp  test_ledger_clock.cpp  test_ledger_id.cpp  test_main.cpp  test_options.cpp  test_plugins.cpp  test_signal.cpp  test_transaction.cpp  test_urlutils.cpp
tests/catch2/: test_broker.cpp  test_clock.cpp  test_entry.cpp  test_journal.cpp  test_journalfile.cpp  test_ledger.cpp
tests/gtest/: brokermock.h  test_broker.cpp  test_brokergrpc.cpp  test_brokergrpcstub.cpp  test_command.cpp  test_journal.cpp  test_journalfile.cpp  test_options.cpp
tests/include/test/: common.h
tests/include/test/catch2/: fixtures.h
tests/include/test/gtest/: brokermock.h  fixtures.h
utils/: CMakeLists.txt
utils/include/cashmere/utils/: file.h
utils/src/: fileutils.cpp
utils/tests/: CMakeLists.txt  test_url.cpp
